# src/FacilityManagement.Api/swagger.json
@@ -1242,7 +1242,7 @@
         "digitalAsset": {
           "$ref": "#/definitions/DigitalAssetDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1253,8 +1253,24 @@
     "CreateMaintenanceRequestRequest": {
       "type": "object",
       "properties": {
-        "maintenanceRequest": {
-          "$ref": "#/definitions/MaintenanceRequestDto"
+        "requestedByProfileId": {
+          "format": "uuid",
+          "type": "string"
+        },
+        "requestedByName": {
+          "type": "string"
+        },
+        "address": {
+          "$ref": "#/definitions/AddressDto"
+        },
+        "phone": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "unattendedUnitEntryAllowed": {
+          "type": "boolean"
         }
       }
     },
@@ -1264,7 +1280,7 @@
         "maintenanceRequest": {
           "$ref": "#/definitions/MaintenanceRequestDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1286,7 +1302,7 @@
         "profile": {
           "$ref": "#/definitions/ProfileDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1308,7 +1324,7 @@
         "role": {
           "$ref": "#/definitions/RoleDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1330,7 +1346,7 @@
         "user": {
           "$ref": "#/definitions/UserDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1371,7 +1387,7 @@
         "digitalAsset": {
           "$ref": "#/definitions/DigitalAssetDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1392,7 +1408,7 @@
             "$ref": "#/definitions/DigitalAssetDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1409,7 +1425,7 @@
             "$ref": "#/definitions/DigitalAssetDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1423,7 +1439,7 @@
         "maintenanceRequest": {
           "$ref": "#/definitions/MaintenanceRequestDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1444,7 +1460,7 @@
             "$ref": "#/definitions/MaintenanceRequestDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1461,7 +1477,7 @@
             "$ref": "#/definitions/MaintenanceRequestDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1475,7 +1491,7 @@
         "profile": {
           "$ref": "#/definitions/ProfileDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1496,7 +1512,7 @@
             "$ref": "#/definitions/ProfileDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1513,7 +1529,7 @@
             "$ref": "#/definitions/ProfileDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1527,7 +1543,7 @@
         "role": {
           "$ref": "#/definitions/RoleDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1548,7 +1564,7 @@
             "$ref": "#/definitions/RoleDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1565,7 +1581,7 @@
             "$ref": "#/definitions/RoleDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1579,7 +1595,7 @@
         "user": {
           "$ref": "#/definitions/UserDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1600,7 +1616,7 @@
             "$ref": "#/definitions/UserDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1617,7 +1633,7 @@
             "$ref": "#/definitions/UserDto"
           }
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1816,7 +1832,7 @@
         "digitalAsset": {
           "$ref": "#/definitions/DigitalAssetDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1830,7 +1846,7 @@
         "maintenanceRequest": {
           "$ref": "#/definitions/MaintenanceRequestDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1844,7 +1860,7 @@
         "profile": {
           "$ref": "#/definitions/ProfileDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1858,7 +1874,7 @@
         "role": {
           "$ref": "#/definitions/RoleDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1872,7 +1888,7 @@
         "user": {
           "$ref": "#/definitions/UserDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1935,7 +1951,7 @@
         "digitalAsset": {
           "$ref": "#/definitions/DigitalAssetDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1957,7 +1973,7 @@
         "maintenanceRequest": {
           "$ref": "#/definitions/MaintenanceRequestDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -1979,7 +1995,7 @@
         "profile": {
           "$ref": "#/definitions/ProfileDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -2001,7 +2017,7 @@
         "role": {
           "$ref": "#/definitions/RoleDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
@@ -2023,7 +2039,7 @@
         "user": {
           "$ref": "#/definitions/UserDto"
         },
-        "validationErrors": {
+        "errors": {
           "type": "array",
           "items": {
             "type": "string"
