# src/FacilityManagement.App/src/app/@api/models/create-role-response.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 import { RoleDto } from './role-dto';
 export interface CreateRoleResponse {
+  errors?: Array<string>;
   role?: RoleDto;
-  validationErrors?: Array<string>;
 }
