# src/FacilityManagement.App/src/app/@api/models/create-user-response.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 import { UserDto } from './user-dto';
 export interface CreateUserResponse {
+  errors?: Array<string>;
   user?: UserDto;
-  validationErrors?: Array<string>;
 }
