# src/FacilityManagement.App/src/app/@api/models/get-digital-assets-page-response.ts
@@ -2,6 +2,6 @@
 import { DigitalAssetDto } from './digital-asset-dto';
 export interface GetDigitalAssetsPageResponse {
   entities?: Array<DigitalAssetDto>;
+  errors?: Array<string>;
   length?: number;
-  validationErrors?: Array<string>;
 }
