# src/FacilityManagement.App/src/app/@api/models/get-maintenance-requests-page-response.ts
@@ -2,6 +2,6 @@
 import { MaintenanceRequestDto } from './maintenance-request-dto';
 export interface GetMaintenanceRequestsPageResponse {
   entities?: Array<MaintenanceRequestDto>;
+  errors?: Array<string>;
   length?: number;
-  validationErrors?: Array<string>;
 }
