# src/FacilityManagement.App/src/app/@api/models/get-profile-by-id-response.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 import { ProfileDto } from './profile-dto';
 export interface GetProfileByIdResponse {
+  errors?: Array<string>;
   profile?: ProfileDto;
-  validationErrors?: Array<string>;
 }
