# src/FacilityManagement.App/src/app/@api/models/get-roles-response.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 import { RoleDto } from './role-dto';
 export interface GetRolesResponse {
+  errors?: Array<string>;
   roles?: Array<RoleDto>;
-  validationErrors?: Array<string>;
 }
