# src/FacilityManagement.App/src/app/@api/models/get-user-by-id-response.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 import { UserDto } from './user-dto';
 export interface GetUserByIdResponse {
+  errors?: Array<string>;
   user?: UserDto;
-  validationErrors?: Array<string>;
 }
