# src/FacilityManagement.App/src/app/@api/models/get-users-response.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 import { UserDto } from './user-dto';
 export interface GetUsersResponse {
+  errors?: Array<string>;
   users?: Array<UserDto>;
-  validationErrors?: Array<string>;
 }
